--- a/htmls/detalle_serie.html
+++ b/htmls/detalle_serie.html
@@ -2,69 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle peli</title>
-    <!-- Tipografía -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
-        rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PELÍCULAS</title>
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
+    rel="stylesheet">
+  <!-- Estilos -->
+  <link rel="stylesheet" href="../css/estilos.css">
 
-    <!-- Estilos -->
-    <link rel="stylesheet" href="../css/estilos.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="../js/detalle_peli.js"></script>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+  <script src="../js/detalle_peli.js"></script>
+ 
 </head>
 
 <body>
-    <!-- HEADER -->
-    <header>
-        <div class="container-header">
-            <a class="logo" href="./home.html">
-                <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
-            </a>
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <nav class="nav" id="nav">
-                <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
-                <a href="../htmls/series.html" class="nav-link">Series</a>
-                <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
-                <div class="dropdown" id="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle">Más</a>
-                    <div class="dropdown-menu">
-                        <a href="#" class="dropdown-item">Novedades</a>
-                        <a href="#" class="dropdown-item">Próximamente</a>
-                    </div>
-                </div>
-                <div class="auth-buttons">
-                    <a href="#">Registrarse</a>
-                    <a href="#" class="login-link">Iniciar sesión</a>
-                </div>
-            </nav>
+  <!-- HEADER -->
+  <header>
+    <div class="container-header">
+      <a class="logo" href="#">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
+      </a>
+      <div class="hamburger" id="hamburger">
+        <i class="bi bi-list"></i>
+      </div>
+      <nav class="nav" id="nav">
+        <a href="../htmls/home.html" class="nav-link">Inicio</a>
+        <a href="../htmls/series.html" class="nav-link">Series</a>
+        <a href="../htmls/peliculas.html"  class="nav-link">Películas</a>
+        <div class="dropdown">
+          <a href="#" class="nav-link dropdown-toggle">Más</a>
+          <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Novedades</a>
+            <a href="#" class="dropdown-item">Próximamente</a>
+          </div>
         </div>
-    </header>
-    <!-- HEADER END -->
-
-    <!-- SEARCH BAR -->
-    <div class="search-bar">
-        <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-        <button class="search-button">
-            <i class="bi bi-search"></i>
-        </button>
+        <div class="LoginContainer">
+          <a href="#" class="registrarse">Registrarse</a>
+          <a href="#"  class="login">Iniciar sesión</a>
+        </div>
+      </nav>
     </div>
-    <!-- SEARCH BAR END -->
+  </header>
+  <!-- HEADER END -->
+
 
 
     <!-- BODY -->
