--- a/htmls/home.html
+++ b/htmls/home.html
@@ -27,7 +27,7 @@
         <i class="bi bi-list"></i>
       </div>
       <nav class="nav" id="nav">
-        <a href="#" class="nav-link">Inicio</a>
+        <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
         <a href="../htmls/series.html" class="nav-link">Series</a>
         <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
         <div class="dropdown">
