--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -4,86 +4,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Películas</title>
+  <title>PELÍCULAS</title>
+
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap" rel="stylesheet">
+
   <!-- Estilos -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-  <!DOCTYPE html>
-  <html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle peli</title>
-    <!-- Tipografía -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
-      rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!-- Estilos -->
-    <link rel="stylesheet" href="../css/estilos.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-    <script src="../js/detalle_peli.js"></script>
-
-  </head>
-
-  <body>
-    <!-- HEADER -->
-    <header>
-      <div class="container-header">
-        <a class="logo" href="./home.html">
-          <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
-        </a>
-        <div class="hamburger" id="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <nav class="nav" id="nav">
-          <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
-          <a href="../htmls/series.html" class="nav-link">Series</a>
-          <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
-          <div class="dropdown" id="dropdown">
-            <a href="#" class="nav-link dropdown-toggle">Más</a>
-            <div class="dropdown-menu">
-              <a href="#" class="dropdown-item">Novedades</a>
-              <a href="#" class="dropdown-item">Próximamente</a>
-            </div>
-          </div>
-          <div class="auth-buttons">
-            <a href="#">Registrarse</a>
-            <a href="#" class="login-link">Iniciar sesión</a>
-          </div>
-        </nav>
+  <!-- HEADER -->
+  <header>
+    <div class="container-header">
+      <a class="logo" href="#">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
+      </a>
+      <div class="hamburger" id="hamburger">
+        <i class="bi bi-list"></i>
       </div>
-    </header>
-    <!-- HEADER END -->
-
-    <!-- SEARCH BAR -->
-    <div class="search-bar">
-      <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-      <button class="search-button">
-        <i class="bi bi-search"></i>
-      </button>
+      <nav class="nav" id="nav">
+        <a href="../htmls/home.html" class="nav-link">Inicio</a>
+        <a href="../htmls/series.html" class="nav-link">Series</a>
+        <a href="../htmls/peliculas.html" style="color: #d94dfc;" class="nav-link">Películas</a>
+        <div class="dropdown">
+          <a href="#" class="nav-link dropdown-toggle">Más</a>
+          <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Novedades</a>
+            <a href="#" class="dropdown-item">Próximamente</a>
+          </div>
+        </div>
+        <div class="LoginContainer">
+          <a href="#" class="registrarse">Registrarse</a>
+          <a href="#" class="login">Iniciar sesión</a>
+        </div>
+      </nav>
     </div>
-    <!-- SEARCH BAR END -->
+  </header>
+  <!-- HEADER END -->
+
+  <!-- SEARCH BAR -->
+  <div class="search-bar">
+    <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
+    <a class="search-button" href="./detalle_peli.html">
+      <i class="bi bi-search"></i>
+    </a>
+  </div>
+  <!-- SEARCH BAR END -->
 
   <!-- Carrusel de Películas -->
   <div class="carousel" id="movieCarousel">
@@ -92,10 +62,10 @@
         <img src="../imagenes/shallow.jpg" alt="Camp Rock">
         <div class="carousel-caption">
           <h5>A Star is Born</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
-          <button class="btn play-btn ocultar">▶</button>
+          <a href="../htmls/visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
+          <a href="../htmls/visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
-            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+            <a href="../htmls/detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
@@ -103,10 +73,10 @@
         <img src="../imagenes/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
+          <a href="../htmls/visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
-            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+            <a href="../htmls/detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
@@ -114,10 +84,10 @@
         <img src="../imagenes/jo.jpg" alt="joker">
         <div class="carousel-caption">
           <h5>El Joker</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
+          <a href="../htmls/visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
-            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+            <a href="../htmls/detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
@@ -131,7 +101,6 @@
     </div>
   </div>
 
-
   <!-- TOP 10 PELÍCULAS HOY -->
   <h2 class="tituloPrincipal">TOP 10 <span>PELÍCULAS</span> HOY</h2>
   <div class="top10-carousel movie-carousel">
@@ -140,32 +109,27 @@
     <button class="movie-carousel-control-next">&#10095;</button>
   </div>
 
-
-
-
   <!-- Carrusel Películas populares de PAI+ -->
   <h2 class="titulos">Películas populares de PAI+</h2>
   <div><a href="">
       <p class="enlace">Ver más >></p>
     </a></div>
-  <div class="movie-carousel pai-carousel"> <!-- Clase 'pai-carousel' agregada -->
+  <div class="movie-carousel pai-carousel">
     <div class="movie-carousel-inner" id="movie-popular-container"></div>
     <button class="movie-carousel-control-prev">&#10094;</button>
     <button class="movie-carousel-control-next">&#10095;</button>
   </div>
-
 
   <!-- Carrusel Mi lista -->
   <h2 class="titulos">Mi lista</h2>
   <div><a href="">
       <p class="enlace">Explorar todo >></p>
     </a></div>
-  <div class="movie-carousel mi-lista-carousel"> <!-- Clase 'mi-lista-carousel' agregada -->
+  <div class="movie-carousel mi-lista-carousel">
     <div class="movie-carousel-inner" id="movie-lista-container"></div>
     <button class="movie-carousel-control-prev">&#10094;</button>
     <button class="movie-carousel-control-next">&#10095;</button>
   </div>
-
 
   <!-- Carrusel Recomendaciones -->
   <h2 class="titulos">Recomendaciones para tí</h2>
@@ -189,7 +153,6 @@
   <!-- FOOTER END -->
 
   <!-- Scripts -->
-
   <script src="../js/Hamburguesa.js"></script>
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
