--- a/htmls/series.html
+++ b/htmls/series.html
@@ -1,108 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Series</title>
+  <title>SERIES</title>
+  
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap" rel="stylesheet">
+  
   <!-- Estilos -->
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
 </head>
-<body>
-  <!DOCTYPE html>
-  <html lang="en">
-  
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Detalle peli</title>
-      <!-- Tipografía -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link
-          href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
-          rel="stylesheet">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
-      <!-- Estilos -->
-      <link rel="stylesheet" href="../css/estilos.css">
-  
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
-      <script src="../js/detalle_peli.js"></script>
-  
-  </head>
-  
-  <body>
-      <!-- HEADER -->
-      <header>
-          <div class="container-header">
-              <a class="logo" href="./home.html">
-                  <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
-              </a>
-              <div class="hamburger" id="hamburger">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-              </div>
-              <nav class="nav" id="nav">
-                  <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
-                  <a href="../htmls/series.html" class="nav-link">Series</a>
-                  <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
-                  <div class="dropdown" id="dropdown">
-                      <a href="#" class="nav-link dropdown-toggle">Más</a>
-                      <div class="dropdown-menu">
-                          <a href="#" class="dropdown-item">Novedades</a>
-                          <a href="#" class="dropdown-item">Próximamente</a>
-                      </div>
-                  </div>
-                  <div class="auth-buttons">
-                      <a href="#">Registrarse</a>
-                      <a href="#" class="login-link">Iniciar sesión</a>
-                  </div>
-              </nav>
-          </div>
-      </header>
-      <!-- HEADER END -->
-  
-      <!-- SEARCH BAR -->
-      <div class="search-bar">
-          <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-          <button class="search-button">
-              <i class="bi bi-search"></i>
-          </button>
-      </div>
-      <!-- SEARCH BAR END -->
 
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <div class="container-header">
+      <a class="logo" href="#">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
+      </a>
+      <div class="hamburger" id="hamburger">
+        <i class="bi bi-list"></i>
+      </div>
+      <nav class="nav" id="nav">
+        <a href="../htmls/home.html" class="nav-link">Inicio</a>
+        <a href="../htmls/series.html" style="color: #d94dfc;" class="nav-link">Series</a>
+        <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
+        <div class="dropdown">
+          <a href="#" class="nav-link dropdown-toggle">Más</a>
+          <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Novedades</a>
+            <a href="#" class="dropdown-item">Próximamente</a>
+          </div>
+        </div>
+        <div class="LoginContainer">
+          <a href="#" class="registrarse">Registrarse</a>
+          <a href="#" class="login">Iniciar sesión</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <!-- HEADER END -->
+
+  <!-- SEARCH BAR -->
+  <div class="search-bar">
+    <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
+    <a class="search-button" href="./detalle_peli.html">
+      <i class="bi bi-search"></i>
+    </a>
+  </div>
+  <!-- SEARCH BAR END -->
+
+  <!-- Carrusel de Series -->
   <div class="carousel" id="movieCarousel">
     <div class="carousel-inner" id="carouselInner">
       <div class="carousel-item active">
         <img src="../imagenes/darknombre.jpg" alt="Dark">
         <div class="carousel-caption">
           <h5>Dark</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
-          <button class="btn play-btn ocultar">▶</button>
+          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../imagenes/internado.jpg" alt="internado" class="mover_img_abajo">
+        <img src="../imagenes/internado.jpg" alt="El internado" class="mover_img_abajo">
         <div class="carousel-caption">
           <h5>El internado</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
-          <button class="btn play-btn ocultar">▶</button>
+          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
@@ -112,8 +85,8 @@
         <img src="../imagenes/bridgerton banner.jpg" alt="Bridgerton">
         <div class="carousel-caption">
           <h5>Los Bridgerton</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
-          <button class="btn play-btn ocultar">▶</button>
+          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
@@ -128,48 +101,44 @@
       <button data-slide-to="2"></button>
     </div>
   </div>
-  <!-- Top series -->
-  <h2 class="tituloPrincipal">
-    TOP 10 <span>SERIES</span> HOY</h2>
-  <div class=" top10-carousel movie-carousel">
-    <div class="movie-carousel-inner top10-carousel-inner" id="serie-top10-container">
-    </div>
+  <!-- Carrusel de Series END -->
+
+  <!-- Top 10 Series -->
+  <h2 class="tituloPrincipal">TOP 10 <span>SERIES</span> HOY</h2>
+  <div class="top10-carousel movie-carousel">
+    <div class="movie-carousel-inner top10-carousel-inner" id="serie-top10-container"></div>
     <button class="movie-carousel-control-prev">&#10094;</button>
     <button class="movie-carousel-control-next">&#10095;</button>
   </div>
 
-  
-   <!-- Carrusel 2 -->
-   <h2 class="titulos">Series populares de PAI+</h2>
-   <div><a href=""><p class="enlace">Ver más >></p></a></div>
-   <div class="movie-carousel pai-carousel">
-     <div class="movie-carousel-inner" id="carousel-inner">
-     </div>
-     <button class="movie-carousel-control-prev">&#10094;</button>
-     <button class="movie-carousel-control-next">&#10095;</button>
-   </div>
- 
-   <!-- Carrusel 3 -->
-   <h2 class="titulos">Mi lista</h2>
-<div><a href=""><p class="enlace">Explorar todo >></p></a></div>
-<div class="movie-carousel mi-lista-carousel"> <!-- Clase 'mi-lista-carousel' agregada -->
-  <div class="movie-carousel-inner" id="serie-trending-container"></div>
-  <button class="movie-carousel-control-prev">&#10094;</button>
-  <button class="movie-carousel-control-next">&#10095;</button>
-</div>
- 
-   <!-- Carrusel 4 -->
-   <h2 class="titulos">Recomendaciones para tí</h2>
-   <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="carousel-inner-series">
-     </div>
-     <button class="movie-carousel-control-prev">&#10094;</button>
-     <button class="movie-carousel-control-next">&#10095;</button>
-   </div>
-   
-      
-   <!-- FOOTER -->
-   <footer>
+  <!-- Series populares de PAI+ -->
+  <h2 class="titulos">Series populares de PAI+</h2>
+  <div><a href=""><p class="enlace">Ver más >></p></a></div>
+  <div class="movie-carousel pai-carousel">
+    <div class="movie-carousel-inner" id="carousel-inner"></div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
+
+  <!-- Mi lista -->
+  <h2 class="titulos">Mi lista</h2>
+  <div><a href=""><p class="enlace">Explorar todo >></p></a></div>
+  <div class="movie-carousel mi-lista-carousel">
+    <div class="movie-carousel-inner" id="serie-trending-container"></div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
+
+  <!-- Recomendaciones para ti -->
+  <h2 class="titulos">Recomendaciones para ti</h2>
+  <div class="movie-carousel">
+    <div class="movie-carousel-inner" id="carousel-inner-series"></div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
     <div class="container-footer">
       <p>&copy; 2025 PAI+. Todos los derechos reservados.</p>
       <nav class="footer-nav">
@@ -181,9 +150,7 @@
   </footer>
   <!-- FOOTER END -->
 
-  <!-- para que avance el carrousel -->
-   
-  
+  <!-- Scripts -->
   <script src="../js/Hamburguesa.js"></script>
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/UltimosEps.js"></script>
@@ -193,5 +160,6 @@
   <script src="../js/trendingseries.js"></script>
   <script src="../js/Listaseries.js"></script>
   <script src="../js/PopularSerie.js"></script>
+
 </body>
 </html>
