--- a/htmls/detalle_serie.html
+++ b/htmls/detalle_serie.html
@@ -2,28 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PELÍCULAS</title>
-  <!-- Tipografía -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
-    rel="stylesheet">
-  <!-- Estilos -->
-  <link rel="stylesheet" href="../css/estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalle serie</title>
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-  <script src="../js/detalle_peli.js"></script>
- 
+    <!-- Estilos -->
+    <link rel="stylesheet" href="../css/estilos.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="../js/detalle_serie.js"></script>
+
 </head>
 
+
 <body>
-  <!-- HEADER -->
+    
+<!-- HEADER -->
   <header>
     <div class="container-header">
       <a class="logo" href="#">
@@ -35,7 +40,7 @@
       <nav class="nav" id="nav">
         <a href="../htmls/home.html" class="nav-link">Inicio</a>
         <a href="../htmls/series.html" class="nav-link">Series</a>
-        <a href="../htmls/peliculas.html"  class="nav-link">Películas</a>
+        <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
         <div class="dropdown">
           <a href="#" class="nav-link dropdown-toggle">Más</a>
           <div class="dropdown-menu">
@@ -52,59 +57,45 @@
   </header>
   <!-- HEADER END -->
 
-
-
-    <!-- BODY -->
-
-
-    <!-- SECCIÓN PORTADA -->
+  <!-- SECCIÓN PORTADA -->
     <section class="portada">
-        <img class="portada__img" src="../imagenes/hsm.webp" alt="">
+        <img class="portada__img" src="../imagenes/hannahMontana.webp" alt="">
         <div class="portada__fondo"></div>
         <div class="portada__info">
-            <img src="../imagenes/hsmLogo.png" class="info__logo">
+            <img src="../imagenes/logoHannah.png" class="info__logo">
 
             <img src="../imagenes/compose.png" class="info__compose">
-            <h5>2007 - 1h 56 min - De adolescente a adulto, Musicales</h5>
-            <h2 class="portada__descripcion">Los Wildcats de East High se enfrentan al verano y dejan que sus talentos
-                brillen.</h2>
-            <button class="portada__btn" type="submit"><i class="bi bi-play-fill"></i>VER</button>
-            <button class="portada__btn añadir"><i class="bi bi-plus"></i></button>
+            <button class="portada__btn añadirLista"><i class="bi bi-plus">Añadir a mi lista</i></button>
+            <h5><br><br>2006-2010 - 4 temporadas - De adolescente a adulto, Comedia</h5>
         </div>
     </section>
+
 
     <!-- SECCIÓN DETALLES -->
     <section class="detalles">
         <div class="detalles__selector">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Detalles</a>
+                    <a class="nav-link active" aria-current="page" href="#">Episodios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="tab-trailer" href="#">Tráiler</a>
+                    <a class="nav-link" id="tab-trailer" href="#">Detalles</a>
                 </li>
             </ul>
         </div>
 
-        <div id="contenido-detalles">
+        <div id="contenido-detalles"  style="display: none;">
             <div class="detalles__descripcion">
-                <h2>High School Musical 2</h2>
-                <p>No hay clases, así que es hora de cantar, bailar y celebrar para los Wildcats de East High.
-                    Trabajando en un club de campo, los adolescentes se divertirán y sus amistades y relaciones serán
-                    puestas a prueba. Troy (Zac Efron) está emocionado con su nuevo trabajo, pero todo forma parte del
-                    plan de Sharpay (Ashley Tisdale) para mantenerlo alejado de Gabriella (Vanessa Hudgens). <br> Los
-                    Wildcats de East High siempre quieren pasárselo bien en vacaciones. Troy acepta entusiasmado un
-                    trabajo en un club, pero todo forma parte del plan de Sharpay para alejarle de Gabriella. ¿Qué
-                    pasará en la noche de la función?</p>
+                <h2>Hannah Montana <br><br></h2>
+                <p>La cantante de pop Miley Stewart se muda a Malibú, California, con la intención de mantener su fama y nombre artístico, Hannah Montana, en secreto. Eso hace que tenga una emocionante doble vida: por el día es una chica corriente y por la noche una famosa sensación adolescente del pop. En su día a día, Miley intenta mantener algo parecido a una vida normal entre sus nuevos compañeros de colegio.</p>
             </div>
 
             <div class="detalles__info">
 
                 <ul class="info">
                     <div class="parte1">
-                        <li>Duración: <br>1 h 56 min</li><br>
-                        <li>Fecha de estreno: <br>2007</li><br>
-                        <li>Género: <br>De adolescente a adulto, Musicales </li><br>
+                        <li>Fecha de estreno: <br>2006-2010</li><br>
+                        <li>Género: <br>De adolescente a adulto, Musica </li><br>
                         <li>Calificación: <br><img src="../imagenes/compose0+.webp" alt=""></li><br>
                         <li>Disponible en los siguientes formatos: <br>
                             <img src="../imagenes/composeHD.webp" alt="">
@@ -113,31 +104,109 @@
                         </li><br>
                     </div>
                     <div class="parte2">
-                        <li>Dirección: <br>Kenny Ortega</li><br>
-                        <li>Con: <br>Zac Efron <br>
-                            Vanessa Hudgens <br>
-                            Ashley Tisdale <br>
-                            Lucas Grabeel <br>
-                            Corbin Bleu <br>
-                            Monique Coleman</li>
+                        <li>Creada por: <br>
+                            Michael Poryes <br>
+                            Rich Correll <br>
+                            Barry O’Brien</li><br>
+                        <li>Con: <br>
+                            Miley Cyrus <br>
+                            Emily Osment <br>
+                            Mitchel Musso <br>
+                            Jason Earles <br>
+                            Billy Ray Cyrus</li>
                     </div>
                 </ul>
             </div>
         </div>
 
-        <div id="contenido-trailer" style="display: none;">
-            <div class="trailer__img">
-                <video src="../imagenes/trailer.mp4" controls loop poster="../imagenes/trailer.webp"></video>
+
+        <div class="select-container">
+            <label for="temporadas">Selecciona una temporada: <br> <br></label>
+            <select id="temporadas">
+                <option value="1">Temporada 1</option>
+                <option value="2">Temporada 2</option>
+                <option value="3">Temporada 3</option>
+                <option value="4">Temporada 4</option>
+                <option value="5">Temporada 5</option>
+                <option value="6">Temporada 6</option>
+            </select>
+        </div>
+
+
+
+        <div id="episodios" class="episodios">  
+            
+            <div class="card">
+                <div class="card__img">
+                    <img src="../imagenes/episodios/1.PNG" alt="">
+                </div>
+                <div class="card__contenido">
+                    <h5>1. Lilly, ¿quieres que te cuente un secreto?</h5>
+                    <p>La mejor amiga de Miley descubre su identidad secreta.</p>
+                    <p>(26 min)</p>
+                </div>
             </div>
 
-            <div class="trailer__descripcion">
-                <p>(2min)</p>
-                <p>Los Wildcats de East High siempre quieren pasárselo bien en vacaciones. Troy acepta entusiasmado un
-                    trabajo en un club, pero todo forma parte del plan de Sharpay para alejarle de Gabriella. ¿Qué
-                    pasará en la noche de la función?</p>
+            <div class="card">
+                <div class="card__img">
+                    <img src="../imagenes/episodios/2.PNG" alt="">
+                </div>
+                <div class="card__contenido">
+                    <h5>2. Miley, coge un chicle, por favor.</h5>
+                    <p>A Miley le preocupa la obsesión de Oliver por Hannah Montana.</p>
+                    <p>(24 min)</p>
+                </div>
             </div>
+
+            <div class="card">
+                <div class="card__img">
+                    <img src="../imagenes/episodios/3.PNG" alt="">
+                </div>
+                <div class="card__contenido">
+                    <h5>3. La estrella se ha escapado.</h5>
+                    <p>Miley y Jackson salen de casa a escondidas.</p>
+                    <p>(25 min)</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img">
+                    <img src="../imagenes/episodios/4.PNG" alt="">
+                </div>
+                <div class="card__contenido">
+                    <h5>4. No puedo obligarte a amar a Hannah.</h5>
+                    <p>Miley y Jackson salen de casa a escondidas.</p>
+                    <p>(25 min)</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img">
+                    <img src="../imagenes/episodios/5.PNG" alt="">
+                </div>
+                <div class="card__contenido">
+                    <h5>5. Allí te encontré y en tu fiesta me colé.</h5>
+                    <p>Miley no invita a Lilly a la fiesta de una estrella del pop.</p>
+                    <p>(24 min)</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img">
+                    <img src="../imagenes/episodios/6.PNG" alt="">
+                </div>
+                <div class="card__contenido">
+                    <h5>6. Abuela, ¿quién es tu nieto favorito?</h5>
+                    <p>La madre de Robby viene a la final de voleibol.</p>
+                    <p>(25 min)</p>
+                </div>
+            </div>
+
+
+
         </div>
     </section>
+
 
 
     <!-- FOOTER -->
@@ -151,8 +220,6 @@
             </nav>
         </div>
     </footer>
-
-
 </body>
 
 </html>
